cluster/apps/capacitor-next/networkpolicies/envoy-gateway-internal-egress-capacitor.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-internal-egress-capacitor
  namespace: network
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: envoy-internal
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: capacitor-next
            app.kubernetes.io/name: capacitor-next
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
